--- a/css/estilo_figuras.css
+++ b/css/estilo_figuras.css
@@ -26,7 +26,7 @@ html,body {
 	color: #000;
 }
 .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
-	color: rgb(255, 32, 32);
+	color: #dddddd;
 }
 
 .navbar-toggler {
@@ -133,9 +133,40 @@ html,body {
   width: 18%;
 }
 
+.card {
+  width: 100%;
+  margin: 20px;
+  border-radius: 6px;
+  overflow: hidden;
+  background: #fff;
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, .2);
+  cursor: default;
+  transition: all 400ms ease;
+}
+
+.card:hover {
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, .4);
+  transform: translateY(-3%);
+}
+
+
 .inner{
   overflow: hidden;
+  box-shadow: 0 0 20px 2px rgba(0, 0, 0, .1);
+  transition: 1s;
 }
+
+.inner img {
+  display: block;
+  width: 100%;
+  border-radius: 5px;
+}
+
+.inner:hover{
+  transform: scale(1.3);
+  z-index: 2;
+}
+
 
 .card-text{
   font-size: 17px;
