--- a/css/estilo_figuras.css
+++ b/css/estilo_figuras.css
@@ -120,6 +120,7 @@ html,body {
   margin-top: 50px;
   margin-bottom: 10px;
   position: absolute;
+  left: 18px;
 }
 
 .navbar_vertical a {
@@ -128,13 +129,14 @@ html,body {
 }
 
 .col-md-4 {
-  padding-top: 80px;
-  padding-left: 50px;
-  width: 18%;
+  align-items: center;
+  width: 280px;
+  box-sizing: border-box;
 }
 
 .card {
   width: 100%;
+  height: 90%;
   margin: 20px;
   border-radius: 6px;
   overflow: hidden;
@@ -142,13 +144,17 @@ html,body {
   box-shadow: 0px 1px 10px rgba(0, 0, 0, .2);
   cursor: default;
   transition: all 400ms ease;
+  align-items: center;
+}
+
+.card-img-top{
+  height: 100%;
 }
 
 .card:hover {
   box-shadow: 5px 5px 20px rgba(0, 0, 0, .4);
   transform: translateY(-3%);
 }
-
 
 .inner{
   overflow: hidden;
