--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ body {
 	line-height: 0.3;
 	background: #fff;
 }
+
 .carousel-item {
 	height: 100vh;
 	min-height: 300px;
@@ -81,7 +82,7 @@ body {
 
 /*Estilo card servicios*/
 .team .card {
-	box-shadow: 15px 15px 40px rgba(0, 0, 0, 0.15);
+	box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 .services .card-body i{
 	font-size: 45px;
@@ -91,36 +92,42 @@ body {
 }
 
 /* Seccion 2 */
-.section-2 .container-fluid {
+.section-2 {
 	background-image: url('/img/comic.jpg');
 	background-size: cover;
 	background-attachment: fixed;
-	filter: brightness(50%);
 }
+
+.container-fluid {
+	background-color: rgba(0, 0, 0, 0.6);
+}
+
 
 .section-2 .heading-1{
 	font-size: 3.3rem;
 	font-weight: 700;
 	text-transform: uppercase;
 	letter-spacing: .3rem;
-	color: white;
+	text-shadow: .1rem .1rem .3rem rgb(255, 246, 246);
 	margin-top: 25px;
-	filter: brightness(100%);
 }
 
 .section-2 .para {
 	width: 60%;
 	margin: auto;
-	font-size: 18px;
+	font-size: 25px;
 	line-height: 1.9;
+	color: white;
 }
 
-/*Modelo 3D Imagen */
-.scene,
-canvas {
-  position: absolute;
-  width: 100%;
-  height: 100%;
+.modelo_dragon {
+	filter: brightness(50%);
+}
+
+/*SECCION 5 FOOTER INICIO */
+.social i {
+	color: #EF5651;
+	font-size: 20px;
 }
 
 
@@ -145,10 +152,7 @@ canvas {
 
 
 
-
-
-
-
+/*	MEDIA SCREEN RESPONSIVE */
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
 	.carousel-caption {
@@ -156,10 +160,17 @@ canvas {
 	}
 	.carousel-caption p {
 		width: 100%;
+		padding-top: 10px;
 	}
 	.img-area img {
 		width: 100%;
+		background-size: cover;
 	}
+
+	.services .col-md-12 {
+		padding-top: 15px;
+	}
+
 }
 @media only screen and (max-width: 767px) {
 	.navbar-nav {
