--- a/css/login.css
+++ b/css/login.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
-    background-image: url('/img/comic.jpg');
+    background-image: url('/img/FONDOWEB.png');
     background-size: cover;
     background-attachment: fixed;
 
