--- a/css/estilo_figuras.css
+++ b/css/estilo_figuras.css
@@ -299,6 +299,20 @@ transform:scale(1.25);
   .item-border {
     border: 4px solid rgba(249, 249, 249, 0.1);
   }
+
+  .col-md-4 {
+  align-items: center;
+  width: 300px;
+  box-sizing: border-box;
+  padding-left: 100px;
+}
+
+.navbar_vertical li {
+  padding-top: 8px;
+  display: inline-block;
+  
+}
+
 }
 
 @media screen and (min-width: 1024px) {
