--- a/css/login.css
+++ b/css/login.css
@@ -12,6 +12,15 @@ body {
 
 }
 
+#loader{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: rgb(209, 209, 209) url("/img/img_figuras/thanos.gif") no-repeat center;
+    z-index: 9999;
+}
+
+
 .container {
     display: flex;
     justify-content: center;
