arreglo rutas de fondo css

--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ body {
 
 /* Seccion 2 */
 .section-2 {
-	background-image: url('/img/comic.jpg');
+	background-image: url('../img/comic.jpg');
 	background-size: cover;
 	background-attachment: fixed;
 }
