--- a/css/login.css
+++ b/css/login.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
-    background-image: url('/img/FONDOWEB.png');
+    background-image: url('../img/FONDOWEB.png');
     background-size: cover;
     background-attachment: fixed;
 
@@ -16,7 +16,7 @@ body {
     position: fixed;
     width: 100%;
     height: 100vh;
-    background: rgb(209, 209, 209) url("/img/img_figuras/thanos.gif") no-repeat center;
+    background: rgb(209, 209, 209) url("../img/img_figuras/thanos.gif") no-repeat center;
     z-index: 9999;
 }
 
