--- a/css/style.css
+++ b/css/style.css
@@ -1,233 +1,206 @@
-
 * {
-	font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 body {
-	background: #f1fbff;
-	overflow-x: hidden;
+  background: #f1fbff;
+  overflow-x: hidden;
 }
 .section-padding {
-	padding: 100px 0;
+  padding: 100px 0;
 }
 /*Estilo navbar */
 .navbar-nav a {
-	font-size: 15px;
-	text-transform: uppercase;
-	font-weight: 500;
+  font-size: 15px;
+  text-transform: uppercase;
+  font-weight: 500;
 }
 .navbar-light .navbar-brand {
-	color: #000;
-	font-size: 25px;
-	text-transform: uppercase;
-	font-weight: bold;
-	letter-spacing: 2px;
+  color: #000;
+  font-size: 25px;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 2px;
 }
 
 .navbar-light .navbar-nav .nav-link {
-	color: #000;
+  color: #000;
 }
-.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
-	color: rgb(255, 32, 32);
+.navbar-light .navbar-nav .nav-link:focus,
+.navbar-light .navbar-nav .nav-link:hover {
+  color: rgb(255, 32, 32);
 }
 
 .navbar-toggler {
-	padding: 1px 5px;
-	font-size: 18px;
-	line-height: 0.3;
-	background: #fff;
+  padding: 1px 5px;
+  font-size: 18px;
+  line-height: 0.3;
+  background: #fff;
 }
 
 .carousel-item {
-	height: 100vh;
-	min-height: 300px;
+  height: 100vh;
+  min-height: 300px;
 }
 .carousel-caption {
-	bottom: 220px;
-	z-index: 2;
-	text-transform: uppercase;
+  bottom: 220px;
+  z-index: 2;
+  text-transform: uppercase;
 }
 .carousel-caption h5 {
-	font-size: 3.3rem;
-	font-weight: 700;
-	text-transform: uppercase;
-	letter-spacing: .3rem;
-	text-shadow: .1rem .1rem .3rem black;
-	margin-top: 25px;
+  font-size: 3.3rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.3rem;
+  text-shadow: 0.1rem 0.1rem 0.3rem black;
+  margin-top: 25px;
 }
 .carousel-caption .btn {
-	border-width: medium;
-	border-radius: 0;
-	padding: .6rem 1.3rem;
-	font-size: 1.1rem;
+  border-width: medium;
+  border-radius: 0;
+  padding: 0.6rem 1.3rem;
+  font-size: 1.1rem;
 }
 
 .carousel-caption p {
-	width: 60%;
-	margin: auto;
-	font-size: 18px;
-	line-height: 1.9;
+  width: 60%;
+  margin: auto;
+  font-size: 18px;
+  line-height: 1.9;
 }
 
 /*Estilo imagen carusel*/
-.carousel-inner:before { 
-	content: '';
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	background: rgba(0, 0, 0, 0.7);
-	z-index: 1;
+.carousel-inner:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 1;
 }
 
 /*Estilo card servicios*/
 .team .card {
-	box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
-.services .card-body i{
-	font-size: 45px;
+.services .card-body i {
+  font-size: 45px;
 }
-.team .card-body i{
-	font-size: 35px;
+.team .card-body i {
+  font-size: 35px;
 }
 
 /* Seccion 2 */
 .section-2 {
-	background-image: url('../img/comic.jpg');
-	background-size: cover;
-	background-attachment: fixed;
+  background-image: url("../img/comic.jpg");
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .container-fluid {
-	background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
-
-.section-2 .heading-1{
-	font-size: 3.3rem;
-	font-weight: 700;
-	text-transform: uppercase;
-	letter-spacing: .3rem;
-	text-shadow: .1rem .1rem .3rem rgb(255, 246, 246);
-	margin-top: 25px;
+.section-2 .heading-1 {
+  font-size: 3.3rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.3rem;
+  text-shadow: 0.1rem 0.1rem 0.3rem rgb(255, 246, 246);
+  margin-top: 25px;
 }
 
 .section-2 .para {
-	width: 60%;
-	margin: auto;
-	font-size: 25px;
-	line-height: 1.9;
-	color: white;
+  width: 60%;
+  margin: auto;
+  font-size: 25px;
+  line-height: 1.9;
+  color: white;
 }
 
 .modelo_dragon {
-	filter: brightness(75%);
+  filter: brightness(75%);
 }
 
 /*SECCION 5 FOOTER INICIO */
 .social i {
-	color: #EF5651;
-	font-size: 20px;
+  color: #ef5651;
+  font-size: 20px;
 }
 
 .logo_footer {
-	position: absolute;
-	left: 50px;
-	top: 1960px;
-	width: 50%;
-	display: block;
-	
+  position: absolute;
+  left: 50px;
+  top: 1960px;
+  width: 50%;
+  display: block;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /*	MEDIA SCREEN RESPONSIVE */
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-	.carousel-caption {
-		bottom: 370px;
-	}
-	.carousel-caption p {
-		width: 100%;
-		padding-top: 10px;
-	}
-	.img-area img {
-		width: 100%;
-		background-size: cover;
-	}
+  .carousel-caption {
+    bottom: 370px;
+  }
+  .carousel-caption p {
+    width: 100%;
+    padding-top: 10px;
+  }
+  .img-area img {
+    width: 100%;
+    background-size: cover;
+  }
 
-	.services .col-md-12 {
-		padding-top: 15px;
-	}
+  .services .col-md-12 {
+    padding-top: 15px;
+  }
 
-	.section-2 .heading-1{
-		font-size: 2.3rem;
-		font-weight: 500;
-		text-transform: uppercase;
-		letter-spacing: .3rem;
-		text-shadow: .1rem .1rem .3rem rgb(255, 246, 246);
-		margin-top: 25px;
-	}
+  .section-2 .heading-1 {
+    font-size: 2.3rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 0.3rem;
+    text-shadow: 0.1rem 0.1rem 0.3rem rgb(255, 246, 246);
+    margin-top: 25px;
+  }
 
-	.section-2 .para {
-		margin: auto;
-		font-size: 1.2rem;
-		line-height: 1.9;
-		color: white;
-	}
+  .section-2 .para {
+    margin: auto;
+    font-size: 1.2rem;
+    line-height: 1.9;
+    color: white;
+  }
 
-	.modelo_dragon {
-		filter: brightness(75%);
-	
-	}
+  .modelo_dragon {
+    filter: brightness(75%);
+  }
 
-	.logo_footer {
-		position: absolute;
-		left: 15px;
-		top: 2450px;
-		width: 50%;
-		display: block;
-		
-	}
-
+  .logo_footer {
+    position: absolute;
+    left: 15px;
+    top: 2450px;
+    width: 50%;
+    display: block;
+  }
 }
 @media only screen and (max-width: 767px) {
-	.navbar-nav {
-		text-align: center;
-	}
-	.carousel-caption {
-		bottom: 125px;
-	}
-	.carousel-caption h5 {
-		font-size: 17px;
-	}
-	.carousel-caption a {
-		padding: 10px 15px;
-		font-size: 15px;
-	}
-	.carousel-caption p {
-		width: 100%;
-		line-height: 1.6;
-		font-size: 12px;
-	}
+  .navbar-nav {
+    text-align: center;
+  }
+  .carousel-caption {
+    bottom: 125px;
+  }
+  .carousel-caption h5 {
+    font-size: 17px;
+  }
+  .carousel-caption a {
+    padding: 10px 15px;
+    font-size: 15px;
+  }
+  .carousel-caption p {
+    width: 100%;
+    line-height: 1.6;
+    font-size: 12px;
+  }
 }
